<resources>
    <string name="app_name">VCare</string>
    <string name="username">Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_deleted_this_message">you deleted this message</string>
    <string name="how_do_you_want_to_use_the_app">How do you want to use the app?</string>
    <string name="get_started">Get Started</string>
    <string name="select_category">Select Category</string>
    <string name="online">online</string>
    <string name="away">away</string>
    <string name="typing">typing...</string>
    <string name="image_message">sent an image</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="bio">Bio</string>
    <string name="feel_free_to_reach_out">feel free to reach out</string>
    <string name="choose_a_category">Choose a Category</string>
    <string name="vcare_messaging">VCare messaging</string>
    <string name="please_enter_your_details">Please Enter Your Details</string>
    <string name="select_photo">Select Photo</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">Register</string>
    <string name="sign_in_to_continue">Sign In To Continue</string>
    <string name="vcare">VCare</string>
    <string name="available_users">Available Users</string>
    <string name="your_profile">Your Profile</string>
    <string name="save">Save</string>
    <string name="textview">TextView</string>
    <string name="category">category</string>
    <string name="image">Image</string>
    <string name="enter_a_message">Enter a Message</string>
    <string name="home">Home</string>
    <string name="users">Users</string>
    <string name="my_account">My Account</string>
    <string name="account">Account</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">settings</string>
    <string name="enable_biometric_during_the_app_start">Enable Biometric during the app start</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="biometrics">Biometrics</string>
    <string name="metallic_gray_green">metallic gray-green</string>
    <string name="blue_grey">Blue-grey</string>
    <string name="metallic_grey_green">metallic grey-green</string>
    <string name="white_grey">White-Grey</string>
    <string name="blue_white">Blue-White</string>
    <string name="profile">Profile</string>
    <string name="settings_">Settings</string>
    <string name="themes">Themes</string>
    <string name="white_blue">White-Blue</string>
    <string name="grey_white">Grey-White</string>
    <string name="metallic_blue">Metallic Blue</string>
    <string name="green">Green</string>
    <string name="teal">Teal</string>
    <string name="replied">Replied</string>
    <string name="reply_here">Enter your reply here</string>
    <string name="reply">Reply</string>
    <string name="v_care_messaging">VCare Messaging</string>
    <string name="category_">Category Required</string>
    <string name="helper">Helper</string>
    <string name="seeker">Seeker</string>
    <string name="profile_photo_required">Profile photo Required</string>
    <string name="please_add_profile">Please add a profile picture</string>
    <string name="success">Registered successfully</string>
    <string name="username_required">Username Required</string>
    <string name="v_care_">Vcare</string>
    <string name="failed">Google sign in failed:(</string>
    <string name="g_sign_in_failed">Google sign in failed:(</string>
    <string name="sign_in_successful">Sign in successful!</string>
    <string name="updated_bio">bio updated!</string>
    <string name="sign_out_successful">Sign out successful!</string>
    <string name="v__care">Vcare</string>
    <string name="v_care">Vcare</string>
    <string name="no_hardware">no biometric hardware :(</string>
    <string name="hardware_unavailable">biometric hardware unavailable :(</string>
    <string name="biometric_not_setup">biometric not setup</string>
    <string name="auth_required">Authentication Required</string>
    <string name="continue_using_app">Authenticate to continue using the app</string>
    <string name="error_occured">error occurred</string>
    <string name="auth_failed">authentication failed,retry</string>
    <string name="welcome">welcome</string>
    <string name="username_">username</string>
    <string name="isdark">isDark</string>
    <string name="ifbiometric">ifBiometric</string>
    <string name="start_a_conversation">start a conversation.</string>
</resources>